@@ -1,3 +1,12 @@
+2007-08-07  Eitan Isaacson  <eitan@ascender.com>
+
+	* macaroon/playback/playback_sequence.py: Added a DebugAction for 
+	printing info to standard output.
+	* macaroon/playback/utils.py: Put in some assertions to avoid dead
+	accessibles in the desktop.
+	* macaroon/record/script_factory.py: Write WaitForFocus in current 
+	format.
+
 2007-07-31  Willie Walker  <william.walker@sun.com>
 
 	* macaroon/playback/keypress_mimic.py, 
